--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Sona</string>
+    <string name="app_name">MyApp</string>
+    <string name ="Title1">Resources</string>
+    <string name ="Resource1">National Suicide Prevention Lifeline</string>
+    <string name ="Resource2">Crisis Text Line</string>
+    <string name ="Resource3">National Domestic Violence Hotline</string>
+    <string name ="Resource4">National Sexual Assault Hotline</string>
 </resources>
