--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,55 @@
     <string name="Title1">Resources</string>
 
     <string name="sign_out">Sign Out</string>
-    <string name="increment">Increment</string>
-    <string name="var_label">Variable:</string>
 
     <string name="Resource1">National Suicide Prevention Lifeline</string>
     <string name="Resource2">Crisis Text Line</string>
     <string name="Resource3">National Domestic Violence Hotline</string>
     <string name="Resource4">National Sexual Assault Hotline</string>
     <string name="title_activity_resources">ResourcesActivity</string>
+    
+    <array name="questionnaire"> 
+        <item>I am happy</item>
+        <item>My family makes me happy</item>
+        <item>My friends make me happy</item>
+        <item>My career makes me happy</item>
+        <item>I am pleased with the way I am</item>
+        <item>I am pleased with my approach to life</item>
+        <item>I am rarely interested in other people</item>
+        
+        <item>I feel tired/low energy</item>
+        <item>I have feelings of guilt</item>
+        <item>I I feel like a failure</item>
+        <item>I have difficulty making decisions</item>
+        <item>I have little interest in doing things</item>
+        <item>I feel hopeless</item>
+        <item>I sleep too much</item>
+        <item>I don't sleep enough</item>
+        <item>I am working toward a long term goal</item>
+        <item>I have good memory</item>
+    </array>
+    
+    <array name= "recs_now">  
+        <item>Write down 3+ good qualities about yourself</item>
+        <item>Request from friends, family or loved ones to send you a list of 3+ things they appreciate about you</item>
+        <item>Look for an exciting event and write it in your calendar</item>
+    </array>
+        
+    <array name= "recs_daily"> 
+        <item>Write down one thing you're grateful for</item>
+        <item>Write down one good thing that happened today</item>
+        <item>Wear clothes that make you feel good</item>
+        <item>Eat a good meal</item>
+        <item>Choose one activity and focus on only that for 30 minutes</item>
+        <item>Limit your social media usage by 30 minutes</item>
+        <item>Go on a ten minute walk</item>
+        <item>Remoe all electronics before going to sleep</item>
+    </array>
+    
+    <array name= "recs_weekly"> 
+        <item>Yoga class</item>
+        <item>Dancing class</item>
+        <item>Cycling class</item>
+        <item>Meditate</item>
+    </array>
 </resources>
