--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,52 @@
 <resources>
     <string name="app_name">MyApp</string>
-    <string name ="Title1">Resources</string>
+    <string name="Title1">Resources</string>
 
     <string name="sign_out">Sign Out</string>
 
-    <string name ="Resource1">National Suicide Prevention Lifeline</string>
-    <string name ="Resource2">Crisis Text Line</string>
-    <string name ="Resource3">National Domestic Violence Hotline</string>
-    <string name ="Resource4">National Sexual Assault Hotline</string>
+    <string name="Resource1">National Suicide Prevention Lifeline</string>
+    <string name="Resource2">Crisis Text Line</string>
+    <string name="Resource3">National Domestic Violence Hotline</string>
+    <string name="Resource4">National Sexual Assault Hotline</string>
+    <string name="questionaire">Questionaire</string>
+
+    <!-- slide 1 -->
+    <string name="happiness">Happiness (On Scale of 1-3)</string>
+    <string name="i_am_happy">I am happy</string>
+    <string name="family_happy">My Family makes me happy</string>
+    <string name="friend_happy">My friends make me happy</string>
+    <string name="career_happy">My career makes me happy</string>
+    <string name="pleased">I am pleased with the way I am</string>
+    <string name="pleased_approach">I am pleased with my approach to life</string>
+    <string name="rarely_interested">I am rarely interested in other people</string>
+
+    <!-- slide 2 -->
+
+    <string name="depression">Depression (On Scale of 1-3)</string>
+    <string name="tired">I feel tired</string>
+    <string name="guilt">I have feeling of guilt</string>
+    <string name="failure">I feel like a failure</string>
+    <string name="decisions">I have difficulty making decisions</string>
+    <string name="little_interest">I have little interest in doing things</string>
+    <string name="hopeless">I feel hopeless</string>
+    <string name="sleep">I sleep too much</string>
+
+    <!-- slide 3 -->
+
+    <string name="anxiety">Anxiety (On Scale of 1-3)</string>
+    <string name="relax">I am able to relax</string>
+    <string name="upsetting">I focus on upsetting events in my life</string>
+    <string name="happy">I am as happy as anyone around me</string>
+    <string name="snap_day">When someone snaps at me, I think about it rest of day</string>
+    <string name="fearful">I am fearful for no reason</string>
+    <string name="muscles">My muscles are tense, aching or sore</string>
+    <string name="frightened">I am easily frightened</string>
+
+    <!-- common -->
+
+    <string name="scale">Scale of 1-3</string>
+    <string name="scale_1">1</string>
+    <string name="scale_2">2</string>
+    <string name="scale_3">3</string>
+    <string name="next">Next</string>
 </resources>
