changed colors in hub, adjusted button width 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">MyApp</string>
     <string name="Title1">Resources</string>
 
+    <string name="increment">increment</string>
+    <string name="var_label">Variable:</string>
+
     <string name="sign_out">Sign Out</string>
     <string name="sign_in">Sign In</string>
     <string name="high_there">Hi there!</string>
@@ -74,14 +77,14 @@
     </string-array>
 
     <string-array name= "recs_daily">
-        <item>Write down one thing you're grateful for</item>
+        <item>Write down one thing you\'re grateful for</item>
         <item>Write down one good thing that happened today</item>
         <item>Wear clothes that make you feel good</item>
         <item>Eat a good meal</item>
         <item>Choose one activity and focus on only that for 30 minutes</item>
         <item>Limit your social media usage by 30 minutes</item>
         <item>Go on a ten minute walk</item>
-        <item>Remoe all electronics before going to sleep</item>
+        <item>Remove all electronics before going to sleep</item>
     </string-array>
 
     <string-array name= "recs_weekly">
