--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyApp</string>
+    <string name="app_name">Sona</string>
     <string name="Title1">Resources</string>
 
     <string name="sign_out">Sign Out</string>
