code along with bar chart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="profile">Profile</string>
     <string name="feeling">How are you feeling?</string>
-    <string name="user">User Name</string>
+    <string name="user">Hayley Pike</string>
     <string name="log_out">Log Out</string>
     <string name="summary">Weekly Summary</string>
     <string name="graph">Graph</string>
